Outlet List and Create is done

--- a/MusicControllerWeb/Areas/Admin/Views/_ViewImports.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using MusicControllerWeb
-@using MusicControllerWeb.Models
+﻿@using MusicController.DTO.ViewModel; 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
