--- a/MusicControllerWeb/Views/Outlet/Create.cshtml
+++ b/MusicControllerWeb/Views/Outlet/Create.cshtml
@@ -3,26 +3,28 @@
 *@
 @{
 }
-<div class=" w-50">
-    <h4 class="">Create New Outlet</h4>
-    <form action="/action_page.php">
-        <div class="form-group">
-            <label for="name">Outlet Name:</label>
-            <input type="text" class="form-control" placeholder="Enter name" id="name">
-        </div>
-        <div class="form-group">
-            <label for="logo">Outlet Logo:</label><br />
-            <input type="file" class="" placeholder="Choose logo" id="logo">
-        </div>
-        <div class="form-group">
-            <label for="pwd">Password:</label>
-            <input type="password" class="form-control" placeholder="Enter password" id="pwd">
-        </div>
-        <div class="form-group">
-            <label for="pwd">Confirm Password:</label>
-            <input type="password" class="form-control" placeholder="Enter password" id="pwd">
-        </div>
-        <button type="submit" class="btn btn-primary float-right">Create Outlet</button>
-    </form>
-
+<div class="row">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 border p-5">
+        <h4 class="">Create New Outlet</h4><br />
+        <form action="#">
+            <div class="form-group">
+                <label for="name">Outlet Name:</label>
+                <input type="text" class="form-control" placeholder="Enter name" id="name">
+            </div>
+            <div class="form-group">
+                <label for="logo">Outlet Logo:</label><br />
+                <input type="file" class="" placeholder="Choose logo" id="logo">
+            </div>
+            <div class="form-group">
+                <label for="pwd">Password:</label>
+                <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+            </div>
+            <div class="form-group">
+                <label for="pwd">Confirm Password:</label>
+                <input type="password" class="form-control" placeholder="Enter password" id="pwd">
+            </div><br />
+            <button type="submit" class="btn btn-success">Create Outlet</button>
+        </form>
+    </div>
 </div>
