--- a/MusicControllerWeb/Views/Playlist/Edit.cshtml
+++ b/MusicControllerWeb/Views/Playlist/Edit.cshtml
@@ -8,37 +8,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<div class="container mt-3">
-    <h4>Playlists</h4><br />
-    <div class="list-group" id="myList">
-        @{ string[] Playlists = { "Playlist 1", "Playlist 2" };}
-        @foreach (var playlist in Playlists)
-        {
-            <a href="#" class="list-group-item text-body text-decoration-none">
-                <div class="row">
-                    <div class="col-sm-2">
-                        <h4>@playlist</h4>
-                    </div>
-                    <div class="col-sm-7 align-content-center h-100">
-
-                        <small>Track 1 - 10AM to 12PM</small><br />
-                        <small>Track 2 - 1PM to 4PM</small><br />
-                        <small class="text-success">Plays every Week on Monday</small>
-                    </div>
-                    <div class="col-sm-3 align-content-end">
-                        <button class="btn btn-outline-primary btn-sm" onclick="location.href='@Url.Action("Edit", "Playlist")'"> Edit </button>
-                    </div>
-                </div>
-            </a>
-        }
-
-    </div>
-</div>
-
 <div class="container row mt-3">
     <div class="col-sm-1"></div>
     <div class="col-sm-10 border p-5">
-        <h4 class="">Create New Playlist</h4>
+        <h4 class="">Edit Playlist</h4>
         <br />
         <form action="#">
             <div class="form-group">
