--- a/MusicControllerWeb/Areas/Admin/Views/AspNetUserRole/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/AspNetUserRole/Index.cshtml
@@ -3,10 +3,7 @@
 @{
     ViewData["Title"] = "Index";
 }
-<h1>Index</h1>
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>User Management</h1>
 <table class="table table-bordered table-dark">
     <thead>
         <tr>
@@ -43,8 +40,6 @@
                 </td>
                 <td>
                         @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                       @* @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
-                       @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })*@
                 </td>
             </tr>
         }
