--- a/MusicControllerWeb/wwwroot/css/site.css
+++ b/MusicControllerWeb/wwwroot/css/site.css
@@ -63,7 +63,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    background-image: url('../logo/1924554.jpg');
+    /*background-image: url('../logo/1924554.jpg');*/
 }
 
 .footer {
