--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
@@ -1,33 +1,35 @@
-﻿@model PlaylistwithTrackViewModel
+﻿@model PlaylistIndexModel
 @{
     ViewData["Title"] = "AddTrack";
+}
+@section styles{
+    <link href="~/css/jquery.timepicker.min.css" rel="stylesheet" />
 }
 <div class="white-color">
     <div class="container row">
         <div class="col-sm-6 border p-5">
             <h4 class="">Edit Playlist</h4><br />
-            <form asp-action="Edit" onsubmit="return onSubmitClick(this);" asp-route-id="@Model.Playlist.Id">
-                <input type="hidden" asp-for="Playlist.OutletId" />
+            <form asp-action="Edit" onsubmit="return onPlaylistSubmitClick(this);" asp-route-id="@Model.Id">
+                <input type="hidden" asp-for="OutletId" />
                 <div class="form-group">
-                    <label asp-for="Playlist.Name" for="name"></label>
-                    <input type="text" asp-for="Playlist.Name" class="form-control" placeholder="Enter name">
-                    <span asp-validation-for="Playlist.Name" class="text-danger"></span>
+                    <label asp-for="Name" for="name"></label>
+                    <input type="text" asp-for="Name" class="form-control" placeholder="Enter name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label for="schedule">Playlist Schedule:</label><br />
-                    <select class="form-control" asp-for="Playlist.Schedule" id="schedule">
+                    <select class="form-control" asp-for="Schedule" id="schedule">
                         <option disabled selected>Please Select</option>
                         <option value="@Schedule.Daily">Daily</option>
                         <option value="@Schedule.AlternativeDay">Alternate Days</option>
                         <option value="@Schedule.Weekly">Weekly</option>
-                        <option value="@Schedule.Monthly">Monthly</option>
                         <option value="@Schedule.Yearly">Yearly</option>
                     </select>
-                    <span asp-validation-for="Playlist.Schedule" class="text-danger"></span>
+                    <span asp-validation-for="Schedule" class="text-danger"></span>
                 </div>
                 <div class="form-group" id="evenOrdays" style="display:none;">
                     <label for="sel3">Even or Odd Days?</label>
-                    <select class="form-control" asp-for="Playlist.Frequency" id="evenOrday">
+                    <select class="form-control" asp-for="Frequency" id="evenOrday">
                         <option disabled selected>Please Select</option>
                         <option value="Even Days">Even Days</option>
                         <option value="Odd Days">Odd Days</option>
@@ -37,7 +39,7 @@
 
                 <div class="form-group" id="weekdays" style="display:none;">
                     <label for="sel1">Which day?</label>
-                    <select class="form-control" asp-for="Playlist.Frequency" id="weekday">
+                    <select class="form-control" asp-for="Frequency" id="weekday">
                         <option disabled selected>Please Select</option>
                         <option value="Monday">Monday</option>
                         <option value="Tuesday">Tuesday</option>
@@ -47,122 +49,32 @@
                         <option value="Saturday">Saturday</option>
                         <option value="Sunday">Sunday</option>
                     </select>
+                    <span id="errweekdays" class="text-danger" style="display:none;">Please select Frequency</span>
                 </div>
 
                 <div class="form-group" id="specificDates" style="display:none;">
                     <label for="sel2">Which Date?</label>
-                    <input type="date" asp-for="Playlist.Frequency" class="form-control" id="specificDate">
+                    <input  asp-for="Frequency" class="form-control date-picker" id="specificDate">
                 </div><br />
                 <button type="submit" class="btn btn-success">Save</button>
             </form>
         </div>
-        <div class="col-sm-6 border p-5">
-            <h4>Add Track</h4><br />
-            <form asp-action="AddTrack" asp-route-id="@Model.Playlist.Id">
-                <div asp-validation-summary="ModelOnly" class="text-danger">
-                </div>
-                <input asp-for="AddTrack.PlaylistId" name="PlaylistId" value="@Model.Playlist.Id" type="hidden" />
-                <div class="form-group">
-                    <label asp-for="AddTrack.TrackURL"></label>
-                    <input asp-for="AddTrack.TrackURL" name="TrackURL" placeholder="Enter Track Url" class="form-control">
-                    <span asp-validation-for="AddTrack.TrackURL" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="AddTrack.StartTime"></label>
-                    <input asp-for="AddTrack.StartTime" name="StartTime" class="form-control" placeholder="Enter Start Time">
-                    <span asp-validation-for="AddTrack.StartTime" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="AddTrack.EndTime"></label>
-                    <input asp-for="AddTrack.EndTime" name="EndTime" class="form-control" placeholder="Enter End Time">
-                    <span asp-validation-for="AddTrack.EndTime" class="text-danger"></span>
-                </div>
-                <br />
-                <button type="submit" class="btn btn-primary">Add Track</button>
-            </form>
-        </div>
+        <!--  Add Track Component-->
+        @await Component.InvokeAsync("AddTrack", new { playlistId = Model.Id })
     </div>
-    <div class="col-md-12">
-        <br />
-        <h5>Tracks:</h5><br />
-        <div class="list-group" id="myList">
-            @foreach (var item in Model.Playlist.Tracks)
-            {
-                <a href="#" class="list-group-item text-body text-decoration-none">
-                    <div class="row">
-                        <div class="col-sm-10 align-content-center h-100">
-                            <span class="text-primary"> @item.TrackURL<br /> </span>
-                            <small>Start Time: @item.StartTime</small><br />
-                            <small>End Time: @item.EndTime</small><br />
-                        </div>
-                        <div class="col-sm-2 align-content-end">
-                            <div class="form-inline">
-                                <button class="btn btn-outline-primary btn-sm mr-2" onclick="location.href='@Url.Action("Edit", "Tracks", new { id = item.Id,area="Admin" })'"> Edit </button>
-                                <form asp-action="Delete" asp-controller="Tracks" asp-route-id="@item.Id">
-                                    <input type="hidden" name="playlistId" value="@item.PlaylistId" />
-                                    <button type="submit" class="btn btn-outline-danger btn-sm">Remove</button>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-
-                </a><br />
-            }
-        </div>
-    </div>
+    <!--  Track List Component-->
+    @await Component.InvokeAsync("TrackList", new { playlistId = Model.Id })
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-<script>
-        $(window).on('load', function () {
-            var value = "@Model.Playlist.Schedule";
-            populatSchudle(value);
-        });
-
-     // todo: dailt no frequncy
-        $("#schedule").change(function () {
-            populatSchudle(this.value);
-        });
-    // populating the case of schudle
-    function populatSchudle(value) {
-          switch (value) {
-                case "@Schedule.Daily":
-                    $("#specificDates").hide();
-                    $("#weekdays").hide();
-                    $("#evenOrdays").hide();
-                    $("#weekday").prop('required', false);
-                    break;
-                case "@Schedule.AlternativeDay":
-                    $("#specificDates").hide();
-                    $("#weekdays").hide();
-                    $("#evenOrdays").show();
-                    $("#evenOrday").prop('required', true);
-                    break;
-                case "@Schedule.Monthly":
-                    $("#specificDates").hide();
-                    $("#weekdays").hide();
-                    $("#evenOrdays").hide();
-                    $("#evenOrday").prop('required', false);
-                    break;
-                case "@Schedule.Weekly":
-                    $("#specificDates").hide();
-                    $("weekday").prop('required', true);
-                    $("#weekdays").show();
-                    $("#evenOrdays").hide();
-                    break;
-                default:
-            }
-    }
-        function onSubmitClick(item) {
-            console.log(item);
-            var schedule = item.schedule.value
-            debugger;
-            if (item.schedule.value == "@Schedule.AlternativeDay" && item.evenOrday.value=="" ) {
-                $("#errevenOrday").show();
-                return false;
-            }
-            return true;
-        }
-</script>
+    <script src="~/js/jquery.timepicker.min.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdn.jsdelivr.net/momentjs/2.13.0/moment.min.js"></script>
+    <script src="~/lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
+    <script>
+        var scheduleValues = "@Model.Schedule";
+    </script>
+    <script src="~/js/Views/Playlit/Playlist.js"></script>
+    <script src="~/js/Views/Playlit/Tracks.js"></script>
 }
