--- a/MusicControllerWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MusicControllerWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,7 +13,7 @@
             <label asp-for="Input.Email"></label>
         </div>
         <div class="form-label-group">
-            <input type="password" asp-for="Input.Password" class="form-control" placeholder="Password" required>
+            <input  asp-for="Input.Password" class="form-control" placeholder="Password" required>
             <label asp-for="Input.Password" for="inputPassword"></label>
             <span asp-validation-for="Input.Password" class="text-danger"></span>
         </div>
