Change Ui and Few More changes in Navbar

--- a/MusicControllerWeb/Areas/Admin/Views/Outlets/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Outlets/Edit.cshtml
@@ -22,7 +22,7 @@
                     <input asp-for="File" class="" id="File" placeholder="Choose logo">
                     <span asp-validation-for="File" class="text-danger"></span>
                 </div><br />
-                <button type="submit" class="btn btn-outline-success">Save</button>
+                <button type="submit" class="btn btn-success">Save</button>
             </form>
         </div>
 
