--- a/MusicControllerWeb/Areas/Admin/Views/Outlets/Schedule.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Outlets/Schedule.cshtml
@@ -20,7 +20,7 @@
                         <small class="text-success">Plays every Week on Monday</small>
                     </div>
                     <div class="col-sm-3 align-content-end">
-                        <button class="btn btn-outline-primary btn-sm" onclick="location.href='@Url.Action("Edit", "Playlist")'"> Edit </button>
+                        <button class="btn btn-primary btn-sm" onclick="location.href='@Url.Action("Edit", "Playlist")'"> Edit </button>
                     </div>
                 </div>
             </a>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                 </a><br />
-                <div class="col-sm-12"><button class="btn btn-primary btn-sm"> + Add Track </button></div>
+                <div class="col-sm-12"><button class="btn btn btn-sm"> + Add Track </button></div>
 
             </div>
 
