--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
@@ -1,6 +1,7 @@
 ﻿@model PlaylistIndexModel
 @{
     ViewData["Title"] = "AddTrack";
+    ViewBag.Show = true;
 }
 @section styles{
     <link href="~/css/jquery.timepicker.min.css" rel="stylesheet" />
