--- a/MusicControllerWeb/Areas/Admin/Views/Shared/Components/ManageOutletPassword/ManageOutletPassword.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Shared/Components/ManageOutletPassword/ManageOutletPassword.cshtml
@@ -16,6 +16,6 @@
                 <input asp-for="ConfirmPassword" class="form-control" placeholder="**********">
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div><br />
-            <button type="submit" class="btn btn-outline-success">Change</button>
+            <button type="submit" class="btn btn-success">Change</button>
         </form>
     </div>
