--- a/MusicControllerWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MusicControllerWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -22,7 +22,7 @@
             <label asp-for="Input.ConfirmPassword" for="inputPassword"></label>
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
         </div>
-        <button class="btn btn-lg btn-outline-success btn-block text-uppercase mb-2" type="submit">Register</button>
+        <button class="btn btn-lg btn-success btn-block text-uppercase mb-2" type="submit">Register</button>
         <p>
             Have already an account?<a asp-page="./LogIn" class="text-primary text-decoration-none"> Log In</a>
         </p>
