--- a/MusicControllerWeb/Areas/Admin/Views/Outlets/Create.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Outlets/Create.cshtml
@@ -22,7 +22,7 @@
                 <span asp-validation-for="File" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-outline-success" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
         </form>
         <div>
