--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Index";
+    ViewBag.Show = true;
 }
 <div class="container mt-3">
     <h2>Playlist</h2>
@@ -11,7 +12,7 @@
             </div>
         </div>
         <div class="p-2">
-            <a asp-action="Create" asp-controller="Playlist" asp-route-id="@ViewBag.OutletId" class="btn btn-outline-primary float-right ">+ Add Playlist</a>
+            <a asp-action="Create" asp-controller="Playlist" asp-route-id="@ViewBag.OutletId" class="btn btn-primary float-right ">+ Add Playlist</a>
         </div>
     </div>
     <br>
@@ -37,7 +38,7 @@
                                 var count = 1;
                                 @foreach (var item in playlist.Tracks)
                                 {
-                                    <small>Track @count - @item.FormatedStartTime to @item.FormatedStartTime</small><br />
+                                    <small>Track @count - @item.FormatedStartTime to @item.FormatedEndTime</small><br />
                                     count = count + 1;
                                 }
                             }
@@ -55,10 +56,10 @@
                         <div class="col-sm-3 align-content-end">
                             <div class="form-inline">
 
-                                <button class="btn btn-outline-primary btn-sm m-1" onclick="location.href='@Url.Action("Edit", "Playlist", new { id = playlist.Id })'"> Edit </button>
+                                <button class="btn btn-primary btn-sm m-1" onclick="location.href='@Url.Action("Edit", "Playlist", new { id = playlist.Id })'"> Edit </button>
                                 <form asp-action="Delete" asp-controller="playlist" asp-route-id="@playlist.Id">
                                     <input type="hidden" name="OutletId" value="@ViewBag.OutletId" />
-                                    <button type="submit" class="btn btn-outline-danger btn-sm">Remove</button>
+                                    <button type="submit" class="btn btn-danger btn-sm">Remove</button>
                                 </form>
                             </div>
                         </div>
