--- a/MusicControllerWeb/Areas/Admin/Views/Shared/Components/OutletDevices/OutletDevices.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Shared/Components/OutletDevices/OutletDevices.cshtml
@@ -55,7 +55,7 @@
                                     <form asp-action="Delete" asp-controller="Devices" asp-route-id="@item.Id">
                                         <input type="hidden" asp-for="@item.Id" name="Id" />
                                         <input type="hidden" asp-for="@item.OutletId" name="OutletId" />
-                                        <button class="btn btn-outline-danger btn-sm"> Remove </button>
+                                        <button class="btn btn-danger btn-sm"> Remove </button>
                                     </form>
                                 </div>
                             </td>
