--- a/MusicControllerWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MusicControllerWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -26,7 +26,7 @@
             <input asp-for="Input.RememberMe" type="checkbox" class="custom-control-input" id="customCheck1">
             <label asp-for="Input.RememberMe" class="custom-control-label" for="customCheck1"></label>
         </div>
-        <button class="btn btn-lg btn-outline-success btn-block text-uppercase mb-2" type="submit">Log in</button>
+        <button class="btn btn-lg btn-success btn-block text-uppercase mb-2" type="submit">Log in</button>
         <p>
             Don't have an account?<a asp-page="./Register" class="text-primary text-decoration-none" asp-route-returnUrl="@Model.ReturnUrl"> Register </a> 
         </p>
