--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Edit.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "AddTrack";
     ViewBag.Show = true;
+    ViewBag.OutletId = Model.OutletId;
 }
 @section styles{
     <link href="~/css/jquery.timepicker.min.css" rel="stylesheet" />
@@ -55,7 +56,7 @@
 
                 <div class="form-group" id="specificDates" style="display:none;">
                     <label for="sel2">Which Date?</label>
-                    <input  asp-for="Frequency" class="form-control date-picker" id="specificDate">
+                    <input asp-for="Frequency" class="form-control date-picker" id="specificDate">
                 </div><br />
                 <button type="submit" class="btn btn-success">Save</button>
             </form>
