--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PlaylistViewModel
+﻿@model IEnumerable<PlaylistIndexModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -17,7 +17,7 @@
     </div>
     <br>
     <div class="list-group" id="myList">
-        @if (!Model.Playlists.Any())
+        @if (!Model.Any())
         {
             <a href="#" class="list-group-item text-body text-decoration-none">
                 <p> No Playlist Found</p>
@@ -25,7 +25,7 @@
         }
         else
         {
-            @foreach (var playlist in Model.Playlists)
+            @foreach (var playlist in Model)
             {
                 <a href="#" class="list-group-item text-body text-decoration-none">
                     <div class="row">
@@ -69,9 +69,9 @@
         }
     </div>
     @*    schudle list  *@
-    @if (Model.Playlists.Any())
+    @if (Model.Any())
     {
-        @await Component.InvokeAsync("WeeklyScheduleList", new { outletId = Model.Playlists.FirstOrDefault().OutletId })
+        @await Component.InvokeAsync("WeeklyScheduleList", new { outletId = Model.FirstOrDefault().OutletId })
     }
 </div>
 
