--- a/MusicControllerWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MusicControllerWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -14,13 +14,13 @@
         </div>
         <div class="form-label-group">
             <input  asp-for="Input.Password" class="form-control" placeholder="Password" required>
-            <label asp-for="Input.Password" for="inputPassword"></label>
+            <label asp-for="Input.Password" ></label>
             <span asp-validation-for="Input.Password" class="text-danger"></span>
         </div>
         <div class="form-label-group">
             <input type="password" asp-for="Input.ConfirmPassword" class="form-control" placeholder="Password" required>
-            <label asp-for="Input.ConfirmPassword" for="inputPassword"></label>
             <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            <label asp-for="Input.ConfirmPassword"></label>
         </div>
         <button class="btn btn-lg btn-success btn-block text-uppercase mb-2" type="submit">Register</button>
         <p>
