--- a/MusicControllerWeb/Views/Shared/_LoginPartial.cshtml
+++ b/MusicControllerWeb/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,14 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity;
+@using MusicController.Identity.UserService;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject ICurrentUserService _currentUserServie;
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <p  class="nav-link text-dark" >Hello @User.Identity.Name!</p>
+        <p class="nav-link text-dark">Hello @_currentUserServie.UserRole!</p>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
