change error message ,todaylist and weelky schudle is done ,added timespam format corrected helper

--- a/MusicControllerWeb/Areas/Admin/Views/Outlets/Index.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Outlets/Index.cshtml
@@ -42,7 +42,7 @@
                             @if (_urlHelper.IsRoleAdmin())
                             {
                                 <div>
-                                    <button class="btn btn-warning btn-sm mr-2" onclick="location.href='@Url.Action("Edit", "Outlets", new { id = item.Id })'"> Manage </button>
+                                    <button class="btn btn-info btn-sm mr-2" onclick="location.href='@Url.Action("Edit", "Outlets", new { id = item.Id })'"> Manage </button>
                                 </div>
                             }
                             @{
