--- a/MusicControllerWeb/Areas/Admin/Views/Playlist/Create.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Playlist/Create.cshtml
@@ -19,7 +19,7 @@
     <div class="col-sm-10 border p-5">
         <h4 class="">Create Playlist</h4>
         <br />
-        <form asp-action="Create" onsubmit="return onSubmitClick(this);" asp-route-id="@Model.OutletId">
+        <form asp-action="Create" autocomplete="off" onsubmit="return onSubmitClick(this);" asp-route-id="@Model.OutletId">
             <input type="hidden" asp-for="Id" value="0" />
             <input type="hidden" asp-for="OutletId" />
             <div class="form-group">
