--- a/MusicControllerWeb/Areas/Admin/Views/Shared/Components/AddTrack/AddTrack.cshtml
+++ b/MusicControllerWeb/Areas/Admin/Views/Shared/Components/AddTrack/AddTrack.cshtml
@@ -2,7 +2,7 @@
 @model TrackViewModel
 <div class="col-sm-6 border p-5">
     <h4>Add Track</h4><br />
-    <form asp-action="AddTrack" onsubmit="return onAddTrackSubmitClick(this)" asp-controller="Tracks" method="post">
+    <form asp-action="AddTrack"  autocomplete="off"  onsubmit="return onAddTrackSubmitClick(this)" asp-controller="Tracks" method="post">
         <div asp-validation-summary="ModelOnly" class="text-danger">
         </div>
         <input asp-for="PlaylistId" type="hidden" />
